css/buddypress.css
/* ... */
#buddypress .group-meta{
	font-size: 90%;
	opacity: 0.5;
}
/* 04c: Group > Profile
-------------------------------------------------------------- */
#buddypress #group-admins{
	list-style: none;
	margin: 0;
	padding: 0;
}
#buddypress #group-admins li{
	margin: 0;
	padding: 0;
}
/* 04d: Group > Create
-------------------------------------------------------------- */

/* 05:  Forum
-------------------------------------------------------------- */

/* 05b:  Forum > Directory
-------------------------------------------------------------- */

/* 06:  Blogs
-------------------------------------------------------------- */
/* 06b: Blog > Directory
-------------------------------------------------------------- */
#buddypress #blogs-dir-list .item-avatar{
	float: left;
	margin: 0 10px 0 0;
}
#buddypress #blogs-dir-list li{
	position: relative;
}
#buddypress #blogs-dir-list .action{
	position: absolute;
	right: 0;
	top: 0;
}
/* 07:  Messages
-------------------------------------------------------------- */
#buddypress .messages-wrap{
	overflow: auto;
}
#buddypress .messages-list {
	float: left;
	margin-right: 2%;
	width: 28%;
}
#buddypress .messages-list ul {
	padding-left:0;
}
#buddypress .messages-list ul li {
	list-style: none;
	margin: 0;
	padding: 0;
}
#buddypress .messages-list ul li a {
	font-size: 75%;
}
#buddypress .messages-content-wrap {
	float: left;
	padding-left: 1%;
	width: 69%;
}
#buddypress #message{
 	margin: 10px 0;
 	padding: 10px;
}
#buddypress #message p{
 	margin: 0;
 	padding: 0;
}
#buddypress .info{
 	background: #3388aa;
 	color: #fff;
}
#buddypress .warning{
 	background: #dd3333;
 	color: #fff;
}
#buddypress .notice{
 	background: #eeeebb;
}
#buddypress .success{
 	background: #88aa22;
 	color: #fff;
}
#sitewide-notice {
		clear: both;
}
/* 08:  Notifications and notices
-------------------------------------------------------------- */
#buddypress table.profile-fields {
	margin-bottom: 20px;
}
#buddypress table.profile-fields:last-child {
	margin-bottom: 0;
}
#buddypress table.profile-fields p {
	margin: 0;
}
#buddypress table.profile-fields p:last-child {
	margin-top: 0;
}
#buddypress table.notifications tr td,
#buddypress table.notifications-settings tr td,
#buddypress table.profile-fields tr td,
#buddypress table.wp-profile-fields tr td,
#buddypress table.messages-notices tr td,
#buddypress table.forum tr td,
#buddypress table.notifications tr th,
#buddypress table.notifications-settings tr th,
#buddypress table.profile-fields tr th,
#buddypress table.wp-profile-fields tr th,
#buddypress table.messages-notices tr th,
#buddypress table.forum tr th {
	padding: 8px;
	vertical-align: middle;
}
#buddypress table.notifications tr td.label,
#buddypress table.notifications-settings tr td.label,
#buddypress table.profile-fields tr td.label,
#buddypress table.wp-profile-fields tr td.label,
#buddypress table.messages-notices tr td.label,
#buddypress table.forum tr td.label {
	border-right: 1px solid #ccc;
	font-weight: bold;
	width: 25%;
}
#buddypress table tr td.thread-info p {
	margin: 0;
}
#buddypress table tr td.thread-info p.thread-excerpt {
	font-size: 80%;
	margin-top: 3px;
}
#buddypress table.forum td {
	text-align: center;
}
#buddypress table.notifications tr.alt td,
#buddypress table.notifications-settings tr.alt td,
#buddypress table.profile-fields tr.alt td,
#buddypress table.wp-profile-fields tr.alt td,
#buddypress table.messages-notices tr.alt td,
#buddypress table.forum tr.alt td {
	background: rgba(0, 0, 0, 0.04);
}
#buddypress table.notification-settings {
	margin-bottom: 20px;
	text-align: left;
}
#buddypress #groups-notification-settings {
	margin-bottom: 0;
}
#buddypress table.notifications th.icon,
#buddypress table.notifications td:first-child,
#buddypress table.notification-settings th.icon,
#buddypress table.notification-settings td:first-child {
	display: none;
}
#buddypress table.notification-settings th.title {
	width: 80%;
}
#buddypress table.notification-settings .yes,
#buddypress table.notification-settings .no {
	width: 40px;
}
#buddypress .message-metadata img{
	float: left;
	margin: 0 10px 0 0;
}
/* 09:  Core widgets
-------------------------------------------------------------- */
/* 10:  Forms
-------------------------------------------------------------- */
#buddypress .standard-form textarea,
#buddypress .standard-form input[type=text],
#buddypress .standard-form input[type=text],
#buddypress .standard-form input[type=color],
#buddypress .standard-form input[type=date],
#buddypress .standard-form input[type=datetime],
#buddypress .standard-form input[type=datetime-local],
#buddypress .standard-form input[type=email],
#buddypress .standard-form input[type=month],
#buddypress .standard-form input[type=number],
#buddypress .standard-form input[type=range],
#buddypress .standard-form input[type=search],
#buddypress .standard-form input[type=tel],
#buddypress .standard-form input[type=time],
#buddypress .standard-form input[type=url],
#buddypress .standard-form input[type=week],
#buddypress .standard-form select,
#buddypress .standard-form input[type=password],
#buddypress .form-search input[type=search],
#buddypress .form-search input[type=text] {
	font: inherit;
}
#buddypress .standard-form{
 	padding: 20px 0;
}
#buddypress .standard-form label{
 	clear: both;
 	display: block;
 	font-weight: 700;
 	padding: 10px;
}
#buddypress .standard-form .form-block{
 	clear: both;
}
#buddypress #item-buttons .generic-button{
	display: inline-block;
	float: left;
	margin: 5px 5px 0 0;
}
#buddypress .standard-from input[type=radio]{
	float: left;
}
#buddypress #settings-form input{
	display: block;
}
#buddypress .button-nav li{
	float: left;
}
#buddypress .standard-form #basic-details-section input[type=password],
#buddypress .standard-form #blog-details-section input#signup_blog_url {
	width: 35%;
}
/* ... */

